--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "version-bot",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Slack bot integration with standard-release version management 🤖",
   "main": "index.js",
   "scripts": {
     "release": "standard-version --infile ./CHANGELOG.md",
     "commit": "git-cz",
-    "build": "npm run clean:dist && tsc && npm run copy:dist && npm run uglify",
+    "build": "npm run clean:dist && tsc && npm run copy:dist && npm run uglify && cd dist && npm link",
     "build:dev": "tsc && npm run copy:dist",
     "uglify": "terser-folder dist -e -o dist -x .js",
     "clean:dist": "rm -rf dist",
@@ -45,8 +45,21 @@
   ],
   "author": "Shahar Kazaz",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@textlint/markdown-to-ast": "^6.1.7",
+    "chalk": "^3.0.0",
+    "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.0",
+    "conventional-changelog": "^3.1.18",
+    "debug": "^4.1.1",
+    "fs-extra": "^9.0.0",
+    "glob": "^7.1.6",
+    "inquirer": "^7.1.0",
+    "ora": "^4.0.3",
+    "request": "^2.88.2"
+  },
   "devDependencies": {
+    "@types/node": "^13.9.2",
     "git-cz": "^4.3.1",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
