--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "uglify": "terser-folder dist -e -o dist -x .js",
     "clean:dist": "rm -rf dist",
     "copy:dist": "cp package.json package-lock.json README.md dist",
-    "prettier": "prettier --write 'src/**/*.ts' && prettier --write '__tests__/*.ts'"
+    "prettier": "prettier --write 'src/**/*.ts'"
   },
   "bin": {
     "version-bot": "index.js"
@@ -23,8 +23,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $GIT_PARAMS",
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
