--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Slack bot integration with standard-release version management 🤖",
   "main": "index.js",
   "scripts": {
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors init",
     "release": "standard-version --infile ./CHANGELOG.md",
     "commit": "git-cz",
     "build": "npm run clean:dist && tsc && npm run copy:dist && npm run uglify",
@@ -58,6 +60,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "all-contributors-cli": "^6.14.0",
     "@types/node": "^13.9.2",
     "git-cz": "^4.3.1",
     "husky": "^4.2.3",
