--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,6 +23,17 @@
         "ideas",
         "infra"
       ]
+    },
+    {
+      "login": "danzrou",
+      "name": "Dan Roujinsky",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/6433766?v=4",
+      "profile": "https://github.com/danzrou",
+      "contributions": [
+        "code",
+        "ideas",
+        "userTesting"
+      ]
     }
   ],
   "contributorsPerLine": 7
